added enums, jwt token